--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Bryan's Personal Site</title>
   </head>
-  <body>
+  <body style="background-color: #7F9695">
     <table cellspacing=20>
       <tr>
         <td><image src="https://raw.githubusercontent.com/bryandorman85/CV/main/Family%20Alles.png" width = 400, height = 300, alt="Family Normal"></image></td>
