--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Bryan's Personal Site</title>
+    <link rel="stylesheet" href="CV/Styles.css">
   </head>
-  <body style="background-color: #7F9695">
+  <body>
     <table cellspacing=20>
       <tr>
         <td><image src="https://raw.githubusercontent.com/bryandorman85/CV/main/Family%20Alles.png" width = 400, height = 300, alt="Family Normal"></image></td>
@@ -13,13 +14,13 @@
         <p>I am a self-starter developer and I love my family!</p></td>
       </tr>
     </table>
-    <hr size="3" color = #600060 />
+    <hr>
     <h2><strong>Education</strong></h2>
     <h3><strong>Brigham Young University - Idaho (online).</strong></h3>
     <ul><li><h4><em>Business Administration, DNF</em></h4></li></ul>
     <h3><strong>Plano West Senior High School</strong></h3>
     <ul><li><h4><em> Graduated May 2004 cum laude</em></h4></li></ul>
-    <hr size="3" color = #606000 />
+    <hr>
     <h2><strong>Certifications</strong></h2>
     <h3><strong>University of Cambridge</strong></h3>
     <ul><li><h4><em>Teacher Knowledge Test: Band 4 in Module 2, Band 3 in Modules 1 and 3</em></h4></li></ul>
@@ -27,7 +28,7 @@
     <ul><li><h4><em>Teacher's Diploma Course, Pass</em></h4></li></ul>
     <h3><strong>Udemy</strong></h3>
     <ul><li><h4><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete Web Development Bootcamp, ANGELA YU, Ongoing</a></h4></li></ul>
-    <hr size="3" color = #006060 />
+    <hr>
     <h2><b>Work Experience</b></h2>
       <table border=1>
         <thead>
@@ -52,7 +53,7 @@
 
         </tfoot>
       </table>
-  <hr size="3" color = #000060 />
+  <hr>
     <h2><strong>Languages</strong></h2>
       <table border=1>
         <tr>
@@ -78,7 +79,7 @@
           </td>
         </tr>
       </table>
-    <hr size="3" color = #606060 />
+    <hr>
     <h2><strong>Other Skills</strong></h2>
     <table cellspacing=10>
       <tr>
@@ -98,7 +99,7 @@
       </tr>
     </table>
 
-    <hr size="3" color = #600000
+    <hr>
     <h2><strong>My Hobbies</strong></h2>
     <h3><ul><li>
 
