--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bryan's Personal Site</title>
-    <link rel="stylesheet" href="CV/Styles.css">
+    <link rel="stylesheet" href="CSS/Styles.css">
   </head>
   <body>
     <table cellspacing=20>
