--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <td>Python</td><td>★★★</td>
       </tr>
       <tr>
-        <td>JS/CSS/HTML</td><td>★★</td>
+        <td>JS/CSS/HTML</td><td>★★★</td>
       </tr>
       <tr>
         <td>C++</td><td>★</td>
