--- a/Hobbies.html
+++ b/Hobbies.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bryan's Hobbies</title>
+    <link rel="stylesheet" href="CSS/Styles.css" />
   </head>
   <body>
     <h2><strong>Bryan's Hobbies</strong></h2>
