--- a/Contact.html
+++ b/Contact.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Bryan's Contact Information</title>
+    <link rel="stylesheet" href="CSS/Styles.css" />
+
   </head>
   <body>
     <h2><strong>Bryan's Contact Information</strong></h2>
