Update Contact.html; colors added

--- a/Contact.html
+++ b/Contact.html
@@ -16,18 +16,18 @@
       <li>Secondary email at bryanadorman85@gmail.com</li>
     </ul></h3>
     <form action="mailto:badndm20102506@gmail.com" method="post" enctype="text/plain">
-      <label>Your Name:</label>
-      <input type="text" name="yourName" value="" />
+      <label style="color: #869397">Your Name:</label>
+      <input style="background-color:  #083D84 color=#869397" type="text" name="yourName" value="" />
       <br />
       <br />
-      <label>Your Email:</label>
-      <input type="email" name="yourEmail" value="" />
+      <label style="color: #869397">Your Email:</label>
+      <input style="background-color:  #083D84 color=#869397" type="email" name="yourEmail" value="" />
       <br />
       <br />
-      <label>Your Message:</label>
+      <label style="color: #869397">Your Message:</label>
       <br />
       <br />
-      <textarea name="yourMessage" rows=8 columns=80></textarea>
+      <textarea style="background-color:  #083D84 color=#869397"name="yourMessage" rows=8 columns=80></textarea>
       <input type="submit" name="" value="" />
     </form>
     <br />
