--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing=20>
       <tr>
-        <td><image src="https://raw.githubusercontent.com/bryandorman85/CV/main/Family%20Alles.png" width = 400, height = 300, alt="Family Normal"></image></td>
+        <td><image src="FamilyAlles.png" width = 400, height = 300, alt="Family Normal"></image></td>
         <td><h1>Bryan DORMAN</h1>
         <p><em><strong>Aspiring</strong> Full Stack Developer</em></p>
         <p>I am a self-starter developer and I love my family!</p></td>
