--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing=20>
       <tr>
         <td><image src="FamilyAlles.png" width = 400, height = 300, alt="Family Normal"></image></td>
-        <td><h1>Bryan DORMAN</h1>
+        <td><h1>Bryan A DORMAN</h1>
         <p><em><strong>Aspiring</strong> Full Stack Developer</em></p>
         <p>I am a self-starter developer and I love my family!</p></td>
       </tr>
